--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -95,8 +95,9 @@ ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=Var
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
 +Profiles=(Name="AimTrace",CollisionEnabled=QueryOnly,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="AimTrace",Response=ECR_Overlap)),HelpMessage="Needs description",bCanModify=True)
 +Profiles=(Name="Projectile",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Projectile",CustomResponses=((Channel="Pawn",Response=ECR_Overlap)),HelpMessage="Needs description",bCanModify=True)
-+DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="AimTrace",DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False)
++Profiles=(Name="CharacterBody",CollisionEnabled=QueryAndPhysics,ObjectTypeName="CharacterBody",CustomResponses=((Channel="Pawn",Response=ECR_Overlap)),HelpMessage="Needs description",bCanModify=True)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,Name="CharacterBody",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +EditProfiles=(Name="Ragdoll",CustomResponses=((Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="AimTrace",Response=ECR_Ignore)))
 +ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 +ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
